add nav bar, stylesheet and refactor form

--- a/src/signup_form2.css
+++ b/src/signup_form2.css
@@ -1,4 +1,4 @@
-.sign-up-form {
+/* .sign-up-form {
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -20,4 +20,4 @@ input,
 label {
   margin: 5px 5px;
   width: 100%;
-}
+} */
