--- a/client/src/home.css
+++ b/client/src/home.css
@@ -7,6 +7,8 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   margin: 0% 30% 0%;
+  gap: 60px;
+  
 }
 
 
@@ -19,8 +21,14 @@ body {
   padding: 3em;
   justify-content: center;
   align-items: center;
+  height: 25rem;
+  border: 0px;
 
   
+}
+
+button {
+  border: 0px;
 }
 
 .profile-box > div {
@@ -32,6 +40,7 @@ body {
   .profiles {
     flex-direction: column;
     margin: 0%;
+    margin: 0% 20% 0%;
   }
 }
 
