--- a/client/src/Register-Form.css
+++ b/client/src/Register-Form.css
@@ -14,7 +14,7 @@ section {
   margin-right: auto;
   max-width: 300px;
   height: 400px;
-  background-color: rgb(21, 20, 20);
+  background-color: #A9D5D6;
   border-radius: 10px;
   padding: 40px;
 }
@@ -32,6 +32,8 @@ section {
 .form-box input {
   font-size: 15px;
   height: 25px;
+  border: 0px;
+  border-radius: 5px;
 }
 
 .form-box form input {
