--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-/* here will the imported font from goole fonts, it will be added to font fammily */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Raleway:wght@900&family=Varela+Round&display=swap');
 
 html, body {
   margin: 0;
@@ -8,26 +8,29 @@ html, body {
 
 
 * {
-  font-family: sans-serif;
+  /* font-family: 'comfortaa', sans-serif; */
 }
 
 .primary-title {
+  font-family: 'Comfortaa', cursive;
   font-size: 90px;
   color: rgb(255,255,255);
 }
 
 .primary-button {
-  color: #fff;
+  color: rgb(240, 240, 240);
   text-transform: uppercase;
+  font-family:'Raleway', sans-serif;
+  
   font-size: 15px;
-  background: linear-gradient(45deg, rgb(48, 79, 254), #94c0f3);
+  background: linear-gradient(87deg, rgb(220 104 202), rgb(255 150 12));
   padding: 12px  30px;
   border-radius: 30px;
   border: none;
 }
 
 .primary-button:hover {
-  background: linear-gradient(260deg, rgb(48, 79, 254), #94c0f3);
+  background: linear-gradient(268deg, rgb(220 104 202), rgb(255 150 12));
 }
 
 .secondary-button {
@@ -66,21 +69,24 @@ nav {
   border-radius: 1rem;
   border: 0;
   font-size: 1.5rem;
-  height: 2rem;
+  font-family:sans-serif;
+  height: 2.2rem;
   line-height: 1.2rem;
-  margin-top: 25px;
+  margin-top: 45px;
   margin-right: 1rem;
   width: 8rem;
   border-width: 2px;
-  border-style: solid;
-  border-color: rgb(255,255,255);
-  color: rgb(255,255,255);
+  color:white;
+  /* border-style: solid; */
+  /* border-color: rgb(255,255,255); */
+  background:linear-gradient(87deg, rgb(255 150 12), rgb(220 104 202));
   background-color: transparent;
 }
 
 nav .nav-button:disabled {
-  background-color: rgb(180, 180, 180);
-  color:rgb(44, 75, 250);
+  background: linear-gradient(rgb(180, 180, 180), rgb(180, 180, 180));
+  /* background-color: rgb(180, 180, 180);
+  color:rgb(253, 253, 253); */
 }
 
 nav .logo-container {
@@ -99,15 +105,11 @@ nav .logo-container .logo {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  background: 
-   /* rgb(255, 255, 255), 0%, 100%; */
-
-  linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.65) 0%,
-        rgba(0,0,0,0) 100%
-  )
-   
+  background: linear-gradient(
+    to bottom,
+    rgb(120, 233, 216) 20%,
+    rgba(97, 176, 212, 0) 100%);
+    
 }
  
 /* --------Auth Modal---------- */
