--- a/client/src/home.css
+++ b/client/src/home.css
@@ -1,6 +1,6 @@
-/* body {
-  background-color: #D3F3EE;
-} */
+body {
+  background-image: url("https://t3.ftcdn.net/jpg/02/98/20/18/360_F_298201821_e90YxH0f6FBwOvcKhynlwF8sNYxlCMsg.webp");
+}
 
 .profiles {
   display: flex;
@@ -8,6 +8,7 @@
   flex-wrap: wrap;
   margin: 0% 30% 0%;
   gap: 60px;
+  
   
 }
 
@@ -27,9 +28,6 @@
   
 }
 
-button {
-  border: 0px;
-}
 
 .profile-box > div {
   margin: 10px;
@@ -44,10 +42,53 @@ button {
   }
 }
 
+.nav-button-profile{
+  height: 5.5rem;
+  margin-top: 45px;
+  border: none;
+  padding-left: 20px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 1.5px;
+  background-color: transparent;
+}
 
 
+img {
+  border-radius: 50%;
+  object-fit: cover;
+}
 
 
+.nav-button-signout {
+  border-radius: 1rem;
+  border: 0;
+  font-size: 1.5rem;
+  font-family:sans-serif;
+  height: 2.2rem;
+  line-height: 1.2rem;
+  margin-top: 45px;
+  margin-right: 1rem;
+  width: 8rem;
+  border-width: 2px;
+  color:rgb(235, 227, 227);
+  /* border-style: solid; */
+  /* border-color: rgb(255, 255, 255); */
+     /* background:linear-gradient(87deg, rgb(255 150 12), rgb(220 104 202)); */
+  background-color: rgba(255, 94, 0, 0.486); 
+}
+
+
+.nav-button-signout:hover {
+  
+  color:rgb(235, 227, 227);
+  /* border-style: solid; */
+  /* border-color: rgb(255, 255, 255); */
+     /* background:linear-gradient(87deg, rgb(255 150 12), rgb(220 104 202)); */
+  background-color: rgba(255, 94, 0, 0.897); 
+}
 /* *{
   box-sizing: border-box;
   margin: 0;
