--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,9 @@ html, body {
 
 
 * {
+  
+    font-family: 'comfortaa', sans-serif;
+    font-weight: 900;
   /* font-family: 'comfortaa', sans-serif; */
 }
 
