--- a/client/src/Profile.css
+++ b/client/src/Profile.css
@@ -11,12 +11,7 @@
   cursor: pointer;
 }
 
-.profile-display {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 
-}
 
 .sign-up-form:hover {
   box-shadow: 0px 15px 20px rgba(0, 1, 1, 0.4);
@@ -26,6 +21,38 @@
 
 .sign-up-form:active {
   transform: translateY(-1px);
+}
+
+.edit-form {
+  top: 175px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+  height: 430px;
+  background-color: #A9D5D6;
+  border-radius: 10px;
+  padding: 40px;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+}
+
+
+
+.edit-form:hover {
+  box-shadow: 0px 15px 20px rgba(0, 1, 1, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.edit-form:active {
+  transform: translateY(-1px);
+}
+
+.profile-display {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
 }
 
 .edit-button {
