--- a/client/src/home.css
+++ b/client/src/home.css
@@ -67,15 +67,15 @@ body {
 }
 
 .nav-button-profile{
-  height: 5.0rem;
+  height: 20rem;
   width: 5rem;
-  margin-top: 45px;
+  margin-top: 9px;
   border: none;
   padding-left: -20px;
   padding-bottom: 5px;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 24px;
   margin: 4px 2px;
   border-radius: 1.5px;
   background-color: transparent;
@@ -88,9 +88,10 @@ body {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-  margin-top: 2rem;
+  margin-top: -11.5rem;
   margin-left: 45rem;
   border-radius: 45%;
+  text-transform: capitalize;
 }
 
 .nav-button-profile:hover {
