--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,6 +114,13 @@ nav .logo-container .logo {
     rgba(97, 176, 212, 0) 100%);
     
 }
+
+.species, .size {
+  font-size: 15px;
+    height: 25px;
+    border: 0px;
+    border-radius: 5px;
+}
  
 /* --------Auth Modal---------- */
 .auth-modal {
